@@ -4,6 +4,7 @@ import jakarta.persistence.Transient;
 
 import java.lang.reflect.Field;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ColumnClauses {
     private final List<ColumnClause> columnClauses;
@@ -14,16 +15,16 @@ public class ColumnClauses {
     private static List<ColumnClause> getColumnClauses(List<Field> fields) {
         return fields.stream()
                 .filter(field -> !field.isAnnotationPresent(Transient.class))
-                .map(ColumnClause::new).toList();
+                .map(ColumnClause::new).collect(Collectors.toList());
     }
 
     public List<String> getQueries() {
-        return this.columnClauses.stream().map(ColumnClause::getQuery).toList();
+        return this.columnClauses.stream().map(ColumnClause::getQuery).collect(Collectors.toList());
     }
 
 
     public List<String> getNames() {
-        return this.columnClauses.stream().map(ColumnClause::name).toList();
+        return this.columnClauses.stream().map(ColumnClause::name).collect(Collectors.toList());
     }
 
     public int columnSize() {
