@@ -5,13 +5,14 @@ import jakarta.persistence.Transient;
 
 import java.lang.reflect.Field;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ValueClauses {
     private final List<ValueClause> values;
     public ValueClauses(List<Field> fields, Object entity) {
         this.values = fields.stream()
                 .filter(ValueClauses::isColumn)
-                .map(field -> new ValueClause(field, entity)).toList();
+                .map(field -> new ValueClause(field, entity)).collect(Collectors.toList());
     }
 
     private static boolean isColumn(Field field) {
@@ -19,6 +20,6 @@ public class ValueClauses {
     }
 
     public List<String> getQueries() {
-        return this.values.stream().map(ValueClause::value).toList();
+        return this.values.stream().map(ValueClause::value).collect(Collectors.toList());
     }
 }
